[gd_scene load_steps=3 format=4 uid="uid://cw80sbtxuvumx"]

[ext_resource type="Script" uid="uid://b7ps6aj22jl7f" path="res://scene/preparation_scene/preparation_scene.gd" id="1_o0ms0"]
[ext_resource type="TileSet" uid="uid://ciepg58tx8ih" path="res://tile/dungeon.tres" id="2_qq0os"]

[node name="PreparationScene" type="Node2D"]
script = ExtResource("1_o0ms0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="HeroCardGrid" type="GridContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 5

[node name="TeamContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16

[node name="TeamContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/TeamContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 2

[node name="FinishButton" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 24)
layout_mode = 2
text = "出发"

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-1, -333)
tile_map_data = PackedByteArray("AAAAAAoAAwAIAAQAAAAAAAsAAwAIAAUAAAAAAAwAAwAAAAkAAAAAAA0AAwAAAAkAAAAAAA4AAwAAAAkAAAAAAA8AAwAAAAkAAAAAABAAAwAAAAkAAAAAABEAAwAAAAkAAAAAABIAAwAAAAkAAAAAABMAAwAAAAkAAAABAAoAAwAGAAQAAAABAAsAAwAGAAUAAAABAAwAAwAAAAkAAAABAA0AAwAAAAkAAAABAA4AAwAAAAkAAAABAA8AAwAAAAkAAAABABAAAwAAAAkAAAABABEAAwAAAAkAAAABABIAAwAAAAkAAAABABMAAwAAAAkAAAACAAoAAwAHAAQAAAACAAsAAwAHAAUAAAACAAwAAwAAAAkAAAACAA0AAwAAAAkAAAACAA4AAwAAAAkAAAACAA8AAwAAAAkAAAACABAAAwAAAAkAAAACABEAAwAAAAkAAAACABIAAwAAAAkAAAACABMAAwAAAAkAAAADAAoAAwAIAAQAAAADAAsAAwAIAAUAAAADAAwAAwAAAAkAAAADAA0AAwAAAAkAAAADAA4AAwAAAAkAAAADAA8AAwAAAAkAAAADABAAAwAAAAkAAAADABEAAwAAAAkAAAADABIAAwAAAAkAAAADABMAAwAAAAkAAAAEAAoAAwAGAAQAAAAEAAsAAwAGAAUAAAAEAAwAAwAAAAkAAAAEAA0AAwAAAAkAAAAEAA4AAwAAAAkAAAAEAA8AAwAAAAkAAAAEABAAAwAAAAkAAAAEABEAAwAAAAkAAAAEABIAAwAAAAkAAAAEABMAAwAAAAkAAAAFAAoAAwAHAAQAAAAFAAsAAwAHAAUAAAAFAAwAAwAAAAkAAAAFAA0AAwAAAAkAAAAFAA4AAwAAAAkAAAAFAA8AAwAAAAkAAAAFABAAAwAAAAkAAAAFABEAAwAAAAkAAAAFABIAAwAAAAkAAAAFABMAAwAAAAkAAAAGAAoAAwAIAAQAAAAGAAsAAwAIAAUAAAAGAAwAAwAAAAkAAAAGAA0AAwAAAAkAAAAGAA4AAwAAAAkAAAAGAA8AAwAAAAkAAAAGABAAAwAAAAkAAAAGABEAAwAAAAkAAAAGABIAAwAAAAkAAAAGABMAAwAAAAkAAAAHAAoAAwAGAAQAAAAHAAsAAwAGAAUAAAAHAAwAAwAAAAkAAAAHAA0AAwAAAAkAAAAHAA4AAwAAAAkAAAAHAA8AAwAAAAkAAAAHABAAAwAAAAkAAAAHABEAAwAAAAkAAAAHABIAAwAAAAkAAAAHABMAAwAAAAkAAAAIAAoAAwAHAAQAAAAIAAsAAwAHAAUAAAAIAAwAAwAAAAkAAAAIAA0AAwAAAAkAAAAIAA4AAwAAAAkAAAAIAA8AAwAAAAkAAAAIABAAAwAAAAkAAAAIABEAAwAAAAkAAAAIABIAAwAAAAkAAAAIABMAAwAAAAkAAAAJAAoAAwAIAAQAAAAJAAsAAwAIAAUAAAAJAAwAAwAAAAkAAAAJAA0AAwAAAAkAAAAJAA4AAwAAAAkAAAAJAA8AAwAAAAkAAAAJABAAAwAAAAkAAAAJABEAAwAAAAkAAAAJABIAAwAAAAkAAAAJABMAAwAAAAkAAAAKAAoAAwAGAAQAAAAKAAsAAwAGAAUAAAAKAAwAAwAAAAkAAAAKAA0AAwAAAAkAAAAKAA4AAwAAAAkAAAAKAA8AAwAAAAkAAAAKABAAAwAAAAkAAAAKABEAAwAAAAkAAAAKABIAAwAAAAkAAAAKABMAAwAAAAkAAAALAAoAAwAHAAQAAAALAAsAAwAHAAUAAAALAAwAAwAAAAkAAAALAA0AAwAAAAkAAAALAA4AAwAAAAkAAAALAA8AAwAAAAkAAAALABAAAwAAAAkAAAALABEAAwAAAAkAAAALABIAAwAAAAkAAAALABMAAwAAAAkAAAAMAAoAAwAIAAQAAAAMAAsAAwAIAAUAAAAMAAwAAwAAAAkAAAAMAA0AAwAAAAkAAAAMAA4AAwAAAAkAAAAMAA8AAwAAAAkAAAAMABAAAwAAAAkAAAAMABEAAwAAAAkAAAAMABIAAwAAAAkAAAAMABMAAwAAAAkAAAANAAoAAwAGAAQAAAANAAsAAwAGAAUAAAANAAwAAwAAAAkAAAANAA0AAwAAAAkAAAANAA4AAwAAAAkAAAANAA8AAwAAAAkAAAANABAAAwAAAAkAAAANABEAAwAAAAkAAAANABIAAwAAAAkAAAANABMAAwAAAAkAAAAOAAoAAwAHAAQAAAAOAAsAAwAHAAUAAAAOAAwAAwAAAAkAAAAOAA0AAwAAAAkAAAAOAA4AAwAAAAkAAAAOAA8AAwAAAAkAAAAOABAAAwAAAAkAAAAOABEAAwAAAAkAAAAOABIAAwAAAAkAAAAOABMAAwAAAAkAAAAPAAoAAwAIAAQAAAAPAAsAAwAIAAUAAAAPAAwAAwAAAAkAAAAPAA0AAwAAAAkAAAAPAA4AAwAAAAkAAAAPAA8AAwAAAAkAAAAPABAAAwAAAAkAAAAPABEAAwAAAAkAAAAPABIAAwAAAAkAAAAPABMAAwAAAAkAAAAQAAoAAwAGAAQAAAAQAAsAAwAGAAUAAAAQAAwAAwAAAAkAAAAQAA0AAwAAAAkAAAAQAA4AAwAAAAkAAAAQAA8AAwAAAAkAAAAQABAAAwAAAAkAAAAQABEAAwAAAAkAAAAQABIAAwAAAAkAAAAQABMAAwAAAAkAAAD+/wkAAwABAAAAAAD+/woAAwAGAAQAAAD+/wsAAwAGAAUAAAD+/wwAAwAAAAkAAAD+/w0AAwAAAAkAAAD+/w4AAwAAAAkAAAD+/w8AAwAAAAkAAAD+/xAAAwAAAAkAAAD+/xEAAwAAAAkAAAD+/xIAAwAAAAkAAAD+/xMAAwAAAAkAAAD+/xQAAwAAAAkAAAD//wkAAwABAAAAAAD//woAAwAHAAQAAAD//wsAAwAHAAUAAAD//wwAAwAAAAkAAAD//w0AAwAAAAkAAAD//w4AAwAAAAkAAAD//w8AAwAAAAkAAAD//xAAAwAAAAkAAAD//xEAAwAAAAkAAAD//xIAAwAAAAkAAAD//xMAAwAAAAkAAAD//xQAAwAAAAkAAAAAAAkAAwABAAAAAAAAABQAAwAAAAkAAAABAAkAAwABAAAAAAABABQAAwAAAAkAAAACAAkAAwABAAAAAAACABQAAwAAAAkAAAADAAkAAwABAAAAAAADABQAAwAAAAkAAAAEAAkAAwABAAAAAAAEABQAAwAAAAkAAAAFAAkAAwABAAAAAAAFABQAAwAAAAkAAAAGAAkAAwABAAAAAAAGABQAAwAAAAkAAAAHAAkAAwABAAAAAAAHABQAAwAAAAkAAAAIAAkAAwABAAAAAAAIABQAAwAAAAkAAAAJAAkAAwABAAAAAAAJABQAAwAAAAkAAAAKAAkAAwABAAAAAAAKABQAAwAAAAkAAAALAAkAAwABAAAAAAALABQAAwAAAAkAAAAMAAkAAwABAAAAAAAMABQAAwAAAAkAAAANAAkAAwABAAAAAAANABQAAwAAAAkAAAAOAAkAAwABAAAAAAAOABQAAwAAAAkAAAAPAAkAAwABAAAAAAAPABQAAwAAAAkAAAAQAAkAAwABAAAAAAAQABQAAwAAAAkAAAARAAkAAwABAAAAAAARAAoAAwAHAAQAAAARAAsAAwAHAAUAAAARAAwAAwAAAAkAAAARAA0AAwAAAAkAAAARAA4AAwAAAAkAAAARAA8AAwAAAAkAAAARABAAAwAAAAkAAAARABEAAwAAAAkAAAARABIAAwAAAAkAAAARABMAAwAAAAkAAAARABQAAwAAAAkAAAA=")
tile_set = ExtResource("2_qq0os")

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/FinishButton" to="." method="_on_finish_button_pressed"]
